
The computation of the default result specification was corrected, and may
impact users if you are running annotators that test the result specification.
For aggregates, if the aggregate does not specify in its capability specifications
that it needs a certain type, and non of the delegates of that aggregate have
that type as an input, then the default result specification will not include
that type, since no one needs it.   

3. Migrating from IBM UIMA to Apache UIMA

This section describes how to move from pre-Apache versions of UIMA to the
Apache version (starting with Apache UIMA 2.1).

Note: Before running the migration utility, be sure to back up your files, just 
in case you encounter any problems, because the migration tool updates the 
files in place in the directories where it finds them.

The migration utility is run by executing the script file 
apache-uima/bin/ibmUimaToApacheUima.bat (Windows) or 
apache-uima/bin/ibmUimaToApacheUima.sh (UNIX). You must pass one argument: the 
directory containing the files that you want to be migrated. Subdirectories 
will be processed recursively.

The script scans your files and applies the necessary updates, for example 
replacing the com.ibm package names with the new org.apache package names. 

The script will only attempt to modify files with the extensions: java, xml, 
xmi, wsdd, properties, launch, bat, cmd, sh, ksh, or csh; and files with no 
extension. Also, files with size greater than 1,000,000 bytes will be skipped. 
(If you want the script to modify files with other extensions, you can edit 
the script file and change the -ext argument appropriately.)

If the migration tool reports warnings, there may be a few additional steps to 
take. The following two sections explain some simple manual changes that you
might need to make to your code.

3.1. JCas Cover Classes for DocumentAnnotation

If you have run JCasGen it is likely that you have the classes 
com.ibm.uima.jcas.tcas.DocumentAnnotation and 