@@ -75,6 +75,11 @@ that type as an input, then the default result specification will not include
 that type, since no one needs it.    
 </p> 
   
+  <p>
+The "soap" adapter code was removed from the Eclipse runtime plugin for uima tooling, because 
+it depended on the axis jars, which were not available.  If this functionality is
+needed, please post to the uima-dev list.</p>
+  
 <h2><a name="migrating">3. Migrating from IBM UIMA to Apache UIMA</a></h2>
 
 <p>
