@@ -53,7 +53,11 @@ impact users if you are running annotators that test the result specification.
 For aggregates, if the aggregate does not specify in its capability specifications
 that it needs a certain type, and non of the delegates of that aggregate have
 that type as an input, then the default result specification will not include
-that type, since no one needs it.   
+that type, since no one needs it.  
+
+The "soap" adapter code was removed from the Eclipse runtime plugin for uima tooling, because 
+it depended on the axis jars, which were not available.  If this functionality is
+needed, please post to the uima-dev list.  
 
 3. Migrating from IBM UIMA to Apache UIMA
 
